# repo-lantern

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_zh-TW.md  pricing.json  pyproject.toml  test_schema.py  test_structured.py
.agent/workflows/: test_release_candidate.md
.github/workflows/: ci.yml  release.yml
.lantern/: lantern.toml  lantern_plan.md
dev_doc/: src_lantern_cli_backends_base.md  src_lantern_cli_backends_claude.md  src_lantern_cli_backends_codex.md  src_lantern_cli_backends_factory.md  src_lantern_cli_backends_gemini.md  src_lantern_cli_backends_openai.md  src_lantern_cli_cli_main.md  src_lantern_cli_config_loader.md  src_lantern_cli_config_models.md  src_lantern_cli_core_architect.md  src_lantern_cli_core_runner.md  src_lantern_cli_core_state_manager.md  src_lantern_cli_core_synthesizer.md  src_lantern_cli_static_analysis_dependency_graph.md  src_lantern_cli_static_analysis_file_filter.md  src_lantern_cli_static_analysis_generic.md  src_lantern_cli_static_analysis_python.md  test_architect.md  test_backend_base.md  test_backend_claude.md  test_backend_codex.md  test_backend_factory.md  test_backend_gemini.md  test_cli_flow.md  test_config_loader.md  test_config_models.md  test_dependency_graph.md  test_e2e_simple.md  test_error_recovery.md  test_file_filter.md  test_runner.md  test_state_manager.md  test_static_analysis_generic.md  test_static_analysis_python.md  test_synthesizer.md
doc/: example_self_analysis_en.md  example_self_analysis_zh-TW.md  spec.md  task.md  task_v2.md  walkthrough.md
docs/: evaluation-cli-llm-backend.md
docs/architecture/: langgraph-design.md
docs/design/: git-diff-tracking.md  roadmap.md  spec-aware-documentation.md  spec.md
spec/: langgraph-subagent-evaluation.md  roadmap.md  spec.md
src/lantern_cli/: __init__.py
tests/: conftest.py  fixtures.py
tests/integration/: test_cli_flow.py  test_cli_validation.py  test_e2e_simple.py  test_error_recovery.py  test_multi_language.py
tests/unit/: test_agentic_planner.py  (+40 more)
(+72 files in other folders)
